<resources>
    <string name="app_name">CoWin Guide</string>
    <string name="cowin_guide">Cowin Guide</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="need_help">Need Help ?</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">Signin !</string>
    <string name="please_enter_username">Please Enter username</string>
    <string name="nusername_length">UserName\'s length Should be greater than or equal to 3</string>
    <string name="please_enter_phone_numer">Please enter phone number</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="pass_length">Password\'s length must be greater than 3</string>
    <string name="please_enter_c_pass">Please enter confirm password</string>
    <string name="pass_mismatch">Password MisMatch</string>
    <string name="user_created">User Created Successfully...</string>
    <string name="user_register_failed">User Registration Failed</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="login_success">User Login Successfully...</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="phone_filter" translatable="false">1234567890</string>
    <string name="name_filter" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.</string>
    <string name="internet_not_connected">Internet Not Connected</string>
    <string name="consumer">Consumer</string>
    <string name="provider">Provider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="location">please enter your location</string>
    <string name="email">email</string>
    <string name="post">Post</string>
    <string name="please_enter_your_service_type">please enter your Service type</string>
    <string name="number_of_services_available">number of services available</string>
    <string name="call_log_list">Call Log List</string>
    <string name="call_type">Call type</string>
    <string name="date">Date</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="please_enter_all_details">Please enter all details</string>
    <string name="post_successfully">Post Successfully...</string>
    <string name="poat_faild">Post Failed!!</string>
    <string name="error">Error getting data!!!</string>
    <string name="internet_problem">Your Device Not Connected through internet</string>
    <string name="your_current_location">please enter your location</string>
    <string name="address_not_valid">Your Address is not valid</string>
    <string name="please_enter_first_name">please enter first name</string>
    <string name="first_name_length">First name\'s length must be greater than or equal to 3</string>
    <string name="please_enter_last_name">please enter last name</string>
    <string name="last_name_length">last name\'s length must be greater than or equal to 3</string>
    <string name="services_type">please select your service type</string>
    <string name="location_failed">Location Filed</string>
    <string name="incoming_call">InComing Call</string>
    <string name="your_post_has_been_posted">your post has been posted successfully</string>
    <string name="success">Success</string>
    <string name="create_post">Create Post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>