<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.Fragment.ProviderFragment">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp18"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/screen_header"
                    style="@style/nunito_font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp15"
                    android:text="Create Post"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp25"
                android:background="@drawable/white_top_curved_25dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp30"
                android:paddingEnd="@dimen/dp30">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp40"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/first_name_et"
                        style="@style/loginEmailEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp15"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:maxLength="15"
                        android:inputType="textCapWords"
                        android:importantForAutofill="no"
                        android:imeOptions="actionNone"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/last_name_et"
                        style="@style/loginEmailEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="@string/name_filter"
                        android:hint="@string/last_name"
                        android:maxLength="15"
                        android:inputType="textCapWords"
                        android:importantForAutofill="no"
                        android:imeOptions="actionNone"
                        android:singleLine="true"
                        tools:ignore="LabelFor" />

                </LinearLayout>


                <TextView
                    android:id="@+id/location"
                    style="@style/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:focusable="false"
                    android:hint="@string/location"
                    android:inputType="none"
                    android:longClickable="false"
                    android:textColor="@color/black"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email_et"
                    style="@style/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:hint="@string/email"
                    android:maxLength="50"
                    android:imeOptions="actionNone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/service_type"
                    style="@style/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:hint="@string/please_enter_your_service_type"
                    android:maxLength="50"
                    android:imeOptions="actionNone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/number_services"
                    style="@style/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:hint="@string/number_of_services_available"
                    android:maxLength="50"
                    android:imeOptions="actionNone"
                    android:singleLine="true" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:background="@drawable/edittext_background"
                    android:orientation="horizontal">


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_marginBottom="@dimen/dp5"
                        android:background="@color/color_eae8ff" />

                    <EditText
                        android:id="@+id/post_phone"
                        style="@style/loginEmailEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:digits="@string/phone_filter"
                        android:hint="@string/please_enter_phone_numer"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:singleLine="true" />

                </LinearLayout>


                <Button
                    android:id="@+id/continue_button"
                    style="@style/nunito_font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/post"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/dp15"
                    android:textSize="@dimen/sp14" />



            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>